--- a/ch04/4.2/4.2.md
+++ b/ch04/4.2/4.2.md
@@ -105,7 +105,7 @@ by at least one 1.
 reads the same backward as forward.
 3. ! The set of all strings of 0s and 1s with an equal number of 0s and 1s.
 4. !! The set of all strings of 0s and 1s with an unequal number of 0s and 1s.
-5. ! The set of all strings of 0s and as in which 011 does not appear as a
+5. ! The set of all strings of 0s and 1s in which 011 does not appear as a
 substring.
 6. !! The set of all strings of 0s and 1s of the form xy, where x<>y and x and y are of the same length.
 
