--- a/ch04/4.3/4.3.md
+++ b/ch04/4.3/4.3.md
@@ -16,9 +16,9 @@
 
 #### 解答
 
-1. 无左公因子
-2. 不适合
-3. 消除左递归
+1.No left common factor
+2. Not suitable
+3. Eliminate Left Recursion
         
            rexpr -> rterm A
                A -> + rterm A | ε
